--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^14.2.14",
     "pg": "^8.13.1",
     "qrcode": "^1.5.4",
-    "vercel": "^37.6.1"
+    "vercel": "^37.6.1",
+    "ws": "^8.18.0"
   }
 }
